# PhD-Thesis

./: .Makefile.swp  .Makefile_dirs.swp  .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  CMakeLists.txt.user.3.3-pre1  DownloadPackages.txt  EqCoOcorrencia.gcx  Makefile  Makefile_dirs  PhD.files  PhdThesis.pro  QMakefile  README.md  clean-all.cmake  complex_network_save.cn  config.gen  config_fixed_files.ini  doxyconfig.gen  installation.sh  main.cpp  moc_SupervisedImage.cpp  uml.xmi
Sources/: CMakeLists.txt  ComplexNetworkV2.cpp  ComplexNetworkV2.hpp  Makefile
Sources/ComplexNetwork/: ArcMapIt.cpp  ArcMapIt.hpp  BreadFirstRandomWalk.cpp  BreadFirstRandomWalk.hpp  CMakeLists.txt  ComplexNetwork.cpp  ComplexNetwork.hpp  ComplexNetworkV2.hpp  Dijkstra.cpp  Dijkstra.hpp  Edge.hpp  Makefile  Node.hpp  NodeString.hpp  unordered_pair.cpp  unordered_pair.hpp
Sources/Docs/html/: graph_legend.html  index.html
Sources/Docs/latex/: refman.tex
Sources/Experiments/: CMakeLists.txt
Sources/Experiments/AnimatedNonAnimatedImages/: CMakeLists.txt  FrequentLabels.cpp  FrequentLabels.hpp  main.cpp
Sources/Experiments/AreaComplexNetworks/: CMakeLists.txt  main.cpp
Sources/Experiments/ComplexNetworkCompare/: CMakeLists.txt  main.cpp
Sources/Experiments/ComplexNetworkToMatlabFile/: CMakeLists.txt  ComplexNetworkToMatlab.cpp  ComplexNetworkToMatlab.hpp  ComplexNetworkToMatlabFile.cpp
Sources/Experiments/ComplexNetworkVisualizer/: CMakeLists.txt  ComplexNetworkViewerWidget.cpp  ComplexNetworkViewerWidget.hpp  ComplexNetworkVisualizer.cpp  ComplexNetworkVisualizer.hpp  main.cpp
Sources/Experiments/ComplexNetworksConstructor/: CMakeLists.txt  main.cpp
Sources/Experiments/ConfigCreator/: CMakeLists.txt  main.cpp
Sources/Experiments/DatabaseVisualizer/: CMakeLists.txt  DatabaseVisualizer.cpp
Sources/Experiments/LabelGuesser/: CMakeLists.txt  ConfigFileParser.cpp  ConfigFileParser.hpp  ConfigParser.cpp  ConfigParser.h  LabelGuesserExperiment.cpp  LabelGuesserExperiment.hpp  LabelGuesserExperimentThread.cpp  LabelGuesserExperimentThread.hpp  analyse_reports.m~  main.cpp  printReport.m  printReport.m~  readReport.m
Sources/Experiments/LabelGuesserRemovingHints/: CMakeLists.txt  LabelGuesserExperimentRemovingHints.cpp  LabelGuesserExperimentRemovingHints.hpp  main.cpp
Sources/Experiments/LabelsComplexNetworks/: CMakeLists.txt  LabelsComplexNetworkConstructor.cpp  LabelsComplexNetworkConstructor.hpp  gMainWindow.cpp  gMainWindow.hpp  main.cpp
Sources/Experiments/LabelsValidationExperiment/: CMakeLists.txt  LabelGuesser.cpp  LabelGuesser.hpp  LabelsValidationExperiment.cpp  LabelsValidationExperiment.hpp  main.cpp
Sources/Experiments/MCLClustering/: CMakeLists.txt  main.cpp
Sources/Experiments/Modularity_py/: compute_modularity.py
Sources/Experiments/OutsideSegmentationEvaluatorTest/: CMakeLists.txt  ConfigFileParser.cpp  ConfigFileParser.hpp  OutsideSegmentation.cpp  OutsideSegmentation.hpp  main.cpp
Sources/Experiments/OutsideSegmentationEvaluatorTestAddingCircle/: AddCircleSegmentation.cpp  AddCircleSegmentation.hpp  CMakeLists.txt  ConfigFileParser.cpp  main.cpp
Sources/FeatureExtractors/: AreaFeature.cpp  AreaFeature.hpp  AreaFeatureExtractor.cpp  AreaFeatureExtractor.hpp  AreaFeatureFactory.cpp  AreaFeatureFactory.hpp  CMakeLists.txt  Feature.hpp  FeatureAbstract.cpp  FeatureAbstract.hpp  FeatureExtractor.cpp  FeatureExtractor.hpp  FeatureExtractorAbstract.hpp  FeatureFactoryAbstract.cpp  FeatureFactoryAbstract.hpp  HsvFeature.cpp  HsvFeature.hpp  HsvFeatureFactory.cpp  HsvFeatureFactory.hpp  HsvHistFeatureExtractor.cpp  HsvHistFeatureExtractor.hpp  LabelFeature.cpp  LabelFeature.hpp  LabelFeatureFactory.cpp  LabelFeatureFactory.hpp  OrientationFeature.cpp  OrientationFeature.hpp  OrientationFeatureFactory.cpp  OrientationFeatureFactory.hpp  QImageCV.cpp  QImageCV.hpp  Region.cpp  Region.hpp  RegionMask.cpp  RegionMask.h  ShapeSignatureFeature.cpp  ShapeSignatureFeature.h  ShapeSignatureFeatureFactory.cpp  ShapeSignatureFeatureFactory.h
Sources/GuiUtilities/: CMakeLists.txt  DatabaseVisualizerWidget.cpp  DatabaseVisualizerWidget.hpp  SupervisedImageViewerWidget.cpp  SupervisedImageViewerWidget.hpp  SupervisedViewerWidget.hpp  supervisedimageviewerwidget.cpp  supervisedimageviewerwidget.hpp
Sources/Headers/: AreaFeatureExtractor.hpp  ComplexNetwork.hpp  ComplexNetworkConstructor.hpp  DatabaseReader.hpp  Feature.hpp  HsvHistFeatureExtractor.hpp  Region.hpp  SunDatabaseReader.hpp
Sources/Segmentation/: CMakeLists.txt  CloserNodesGuesser.cpp  CloserNodesGuesser.hpp  EntropyXorSegmentationEvaluator.cpp  EntropyXorSegmentationEvaluator.hpp  ImageSegmentation.cpp  ImageSegmentation.hpp  SegmentationEvaluator.cpp  SegmentationEvaluator.hpp  SegmentedImage.cpp  SegmentedImage.hpp  Segmenter.cpp  Segmenter.hpp  SumWeightSegmentationEvaluator.cpp  SumWeightSegmentationEvaluator.h  VoronoiRandomSegmenter.cpp  VoronoiRandomSegmenter.hpp  XorSegmentationEvaluator.cpp  XorSegmentationEvaluator.hpp  segmenter.hpp
Sources/Sources/: Feature.cpp  FeatureExtractor.cpp  Region.cpp  SupervisedImage.cpp  main.cpp
Sources/Tests/: CMakeLists.txt  Makefile  NetworkConstructionTest.cpp  main.cpp
Sources/Utilities/: CMakeLists.txt  CachedComplexNetwork.cpp  CachedComplexNetwork.hpp  ClusteringCoefficient.cpp  ClusteringCoefficient.h  ComplexNetworkConstructor.cpp  ComplexNetworkConstructor.hpp  ConfigParser.cpp  ConfigParser.h  DatabaseReader.hpp  Degrees.cpp  Degrees.h  Dijkstra.cpp  Dijkstra.hpp  FeaturesComplexNetwork.cpp  FeaturesComplexNetwork.hpp  GraphUtilities.cpp  GraphUtilities.hpp  IterativeRandomWalk.cpp  IterativeRandomWalk.hpp  KFoldDatabaseReader.cpp  KFoldDatabaseReader.hpp  Link.cpp  Link.hpp  MCLClustering.cpp  MCLClustering.hpp  Modularity.cpp  Modularity.hpp  NodeString.cpp  NodeString.hpp  RandomWalk.cpp  RandomWalk.hpp  Region.hpp  SunDatabaseReader.cpp  SunDatabaseReader.hpp  SupervisedImage.cpp  SupervisedImage.hpp  TimeEstimator.cpp  TimeEstimator.hpp  Utils.cpp  (+7 more)
Sources/html/: index.html  jquery.js
Sources/latex/: refman.tex
Tests/: output.txt
(+2740 files in other folders)
