CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT( Phd-Thesis )
SET(CMAKE_CXX_FLAGS
    "-std=c++11"
    )


INCLUDE_DIRECTORIES(Sources/Headers/)

FIND_PACKAGE( OpenCV REQUIRED )
FIND_PACKAGE( Qt5Widgets REQUIRED)

FILE(GLOB_RECURSE sources Sources/Sources/* Sources/Headers/* )

ADD_EXECUTABLE(PhD ${sources} )
TARGET_LINK_LIBRARIES(PhD ${Qt5Widgets_LIBRARIES} ${OpenCV_LIBRARIES} )
