cmake_minimum_required(VERSION 2.4)
add_definitions( -DUSE_MATH_DEFINES )


if(POLICY CMP0020)
      cmake_policy(SET CMP0020 NEW) 
endif()

IF(COMMAND cmake_policy)
      CMAKE_POLICY(SET CMP0003 NEW)
ENDIF(COMMAND cmake_policy)

PROJECT(PhDThesis C CXX)
SET(CMAKE_AUTOMOC TRUE)
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_INCLUDE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/include)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

ADD_DEFINITIONS(-std=c++11 -g -O2 -Wall -g)
IF(APPLE)
    ADD_DEFINITIONS(-fPIC)
ENDIF()


ADD_SUBDIRECTORY(Sources)

#add_custom_target(clean-cmake-files
#    COMMAND ${CMAKE_COMMAND} -P clean-all.cmake
#)

INCLUDE(CPack)
