
FIND_PACKAGE(Qt5OpenGL REQUIRED)
FIND_PACKAGE(Qt5Widgets REQUIRED)
FIND_PACKAGE(Qt5Sql REQUIRED)
FIND_PACKAGE(Qt5WebKitWidgets REQUIRED)
FIND_PACKAGE(VTK REQUIRED)
FIND_PACKAGE(OpenCV REQUIRED)
INCLUDE(${VTK_USE_FILE})
#INCLUDE(${QT_USE_FILE})

SET(CMAKE_AUTOMOC ON)


ADD_SUBDIRECTORY(LabelsComplexNetworks)
#ADD_SUBDIRECTORY(AreaComplexNetworks)
ADD_SUBDIRECTORY(ComplexNetworkVisualizer)
#ADD_SUBDIRECTORY(ComplexNetworkToMatlabFile)
ADD_SUBDIRECTORY(DatabaseVisualizer)
ADD_SUBDIRECTORY(SetupPadrao)
