
FIND_PACKAGE(Qt5OpenGL REQUIRED)
FIND_PACKAGE(Qt5Widgets REQUIRED)
FIND_PACKAGE(Qt5Sql REQUIRED)
#FIND_PACKAGE(Qt5WebKitWidgets REQUIRED)
FIND_PACKAGE(VTK REQUIRED)
FIND_PACKAGE(OpenCV REQUIRED)
INCLUDE(${VTK_USE_FILE})
#INCLUDE(${QT_USE_FILE})



ADD_SUBDIRECTORY(AnimatedNonAnimatedImages)
ADD_SUBDIRECTORY(LabelsComplexNetworks)
#ADD_SUBDIRECTORY(AreaComplexNetworks)
#ADD_SUBDIRECTORY(ComplexNetworkVisualizer)
##ADD_SUBDIRECTORY(ComplexNetworkToMatlabFile)
#ADD_SUBDIRECTORY(DatabaseVisualizer)
ADD_SUBDIRECTORY(SetupPadrao)
ADD_SUBDIRECTORY(ConfigCreator)
ADD_SUBDIRECTORY(PhysicalMeasures)
#ADD_SUBDIRECTORY(LabelsValidationExperiment)
ADD_SUBDIRECTORY(SunRandomFolderGenerator)
ADD_SUBDIRECTORY(LabelGuesser)
ADD_SUBDIRECTORY(WebServer)
ADD_SUBDIRECTORY(SegmentationEvaluatorTest)
ADD_SUBDIRECTORY(OutsideSegmentationEvaluatorTest)
ADD_SUBDIRECTORY(OutsideSegmentationEvaluatorTestAddingCircle)

