#Create FeatureExtractors library
FIND_PACKAGE(Qt5Core REQUIRED)
FIND_PACKAGE(Qt5Gui REQUIRED)
FIND_PACKAGE(OpenCV REQUIRED)

INCLUDE_DIRECTORIES(${OPENCV_INCLUDE_DIR})

FILE(GLOB_RECURSE Source_Files  *.cpp *.hpp)
ADD_LIBRARY(FeatureExtractors ${Source_Files})
TARGET_LINK_LIBRARIES(FeatureExtractors ${Qt5Core_LIBRARIES} ${Qt5Gui_LIBRARIES})

