
#Create GuiUtilities library
FIND_PACKAGE(Qt5Core REQUIRED)
FIND_PACKAGE(Qt5Widgets REQUIRED)
FIND_PACKAGE(Qt5Gui REQUIRED)
FIND_PACKAGE(OpenCV REQUIRED)

set(CMAKE_INCLUDE_CURRENT_DIR ON)


FILE(GLOB_RECURSE Source_Files  *.cpp)
ADD_LIBRARY(GuiUtilities ${Source_Files})
TARGET_LINK_LIBRARIES(GuiUtilities ${Qt5Widgets_LIBRARIES} Utilities)

