
#FIND_LIBRARY(ComplexNetwork REQUIRED)
#FIND_LIBRARY(FeatureExtractors REQUIRED)
FIND_PACKAGE(Qt5Widgets REQUIRED)
FIND_PACKAGE(Qt5Gui REQUIRED)
FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(VTK REQUIRED)
INCLUDE(${VTK_USE_FILE})

SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(CMAKE_AUTOMOC TRUE)


ADD_SUBDIRECTORY(AreaFeatureExtractionTest)
ADD_SUBDIRECTORY(ComplexNetworkConstructionTest)
ADD_SUBDIRECTORY(ComplexNetworkResourcesTest)
ADD_SUBDIRECTORY(RandomWalkTest)
#ADD_SUBDIRECTORY(SegmenterTest)

MESSAGE(STATUS ${CMAKE_INSTALL_PREFIX})

