
FIND_PACKAGE(Qt5OpenGL REQUIRED)
FIND_PACKAGE(Qt5Widgets REQUIRED)
FIND_PACKAGE(Qt5Sql REQUIRED)
#FIND_PACKAGE(Qt5WebKitWidgets REQUIRED)
FIND_PACKAGE(VTK REQUIRED)
FIND_PACKAGE(OpenCV REQUIRED)
INCLUDE(${VTK_USE_FILE})

SET(CMAKE_AUTOMOC ON)

INCLUDE_DIRECTORIES(../../)
INCLUDE_DIRECTORIES(.)
FILE(GLOB_RECURSE sources *.cpp)
ADD_EXECUTABLE(ComplexNetworkToMatlabFile ${sources})
TARGET_LINK_LIBRARIES(ComplexNetworkToMatlabFile FeatureExtractors ComplexNetwork Utilities Qt5::Core Qt5::Widgets ${OpenCV_LIBS}  ${VTK_LIBRARIES})
