
FIND_PACKAGE(Qt5Core REQUIRED)
FIND_PACKAGE(Qt5Gui REQUIRED)
FIND_PACKAGE(Qt5OpenGL REQUIRED)
FIND_PACKAGE(Qt5Widgets REQUIRED)
FIND_PACKAGE(Qt5Sql REQUIRED)
#FIND_PACKAGE(Qt5WebKitWidgets REQUIRED)
FIND_PACKAGE(VTK REQUIRED)
FIND_PACKAGE(OpenCV REQUIRED)
INCLUDE(${VTK_USE_FILE})

SET(CMAKE_AUTOMOC ON)

INCLUDE_DIRECTORIES(".")
INCLUDE_DIRECTORIES("../../../")

FILE(GLOB_RECURSE Source_Files  *.cpp *.hpp)

ADD_EXECUTABLE(OutsideSegmentationEvaluatorTestAddingCircle ${Source_Files})
TARGET_LINK_LIBRARIES(OutsideSegmentationEvaluatorTestAddingCircle FeatureExtractors Segmentation ComplexNetwork Utilities Qt5::Core Qt5::Gui Qt5::Widgets ${OpenCV_LIBS}  ${VTK_LIBRARIES})
