
#FIND_LIBRARY(ComplexNetwork REQUIRED)
#FIND_LIBRARY(FeatureExtractors REQUIRED)
FIND_PACKAGE(Qt5Widgets REQUIRED)
FIND_PACKAGE(Qt5Gui REQUIRED)
FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(VTK REQUIRED)
INCLUDE(${VTK_USE_FILE})

SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(CMAKE_AUTOMOC TRUE)



#Build RandomWalkTest
FILE(GLOB_RECURSE RandomWalkTest_Sources *.cpp)
ADD_EXECUTABLE(RandomWalkTest ${RandomWalkTest_Sources})
TARGET_LINK_LIBRARIES(RandomWalkTest ${Qt5Widgets_LIBRARIES} ${Qt5Gui_LIBRARIES} ${OpenCV_LIBRARIES} ComplexNetwork FeatureExtractors Utilities Segmentation)


MESSAGE(STATUS ${CMAKE_INSTALL_PREFIX})

